--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 50vh;
+    min-height: 100vh;
     background-color: #ecf0f3;
     background-image: url(photo-1627398242454-45a1465c2479.jpg);
     background-position: center;
@@ -46,7 +46,7 @@ body{
     align-items: center;
     justify-content: center;   
     padding: 100px;
-    width: 350px;
+    width: 500px;
     flex-direction: column;
     background: #ecf0f3;
     border-radius: 10px;
@@ -54,8 +54,8 @@ body{
                  3px 3px 5px #ceced1;  
 }
 .wrapper .img-area{
-    height: 200px;
-    width: 200px;
+    height: 400px;
+    width: 400px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -73,7 +73,7 @@ body{
     object-fit: cover;
 }
 .wrapper .name{
-    font-size: 23px;
+    font-size: 40px;
     font-weight: 500;
     color: #31344b;
     margin: 10px 0 5px 0;
@@ -81,14 +81,14 @@ body{
 .wrapper .about{
     font-weight: 400;
     color: #44476a;
-    font-size: 16px;
+    font-size: 25px;
 }
 .wrapper .social-icons{
     margin: 15px 0 25px 0;
 }
 .social-icons a{
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     display: inline-flex;
     text-decoration: none;
     margin: 0 5px;
@@ -116,7 +116,7 @@ body{
     text-align: center;
     width: 100%;
     height: 100%;
-    line-height: 40px;
+    line-height: 50px;
     position: relative;
     z-index: 5;
 }
@@ -130,7 +130,7 @@ body{
     color: green;
 }
 .social-icons a.snapchat i{
-    color: yellow;
+    color: dark yellow;
 }
 .wrapper .buttons{
     display: flex;
