--- a/style.css
+++ b/style.css
@@ -17,19 +17,19 @@ body{
 .about h1{
     text-align: left;
     font-size: 30px;
-    color: lightblack;
+    color: black;
     font-weight: 70;
 }
 .about h2{
     text-align: left;
     font-size: 30px;
-    color: lightblack;
+    color: black;
     font-weight: 70;
 }
 .about h3{
     text-align: left;
     font-size: 30px;
-    color: lightblack;
+    color: black;
     font-weight: 70;
 }
 .wrapper,
