--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body{
     color: dark yellow;
 }
 .social-icons a.telegram i{
-    color: blue;
+    color: lightblue;
 }
 .wrapper .buttons{
     display: flex;
